--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample HTML Page</title>
+    <title>Sample HTML New Page</title>
 </head>
 <body>
-    <h1>Welcome to My Website!</h1>
-    <p>This is a simple paragraph of text on the page.</p>
+    <h1>Welcome to My New Website!</h1>
+    <p>This is a simple paragraph of text on the new page.</p>
     
     <h2>Here are some items in a bulleted list:</h2>
     <ul>
