--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sample HTML New Page</title>
 </head>
 <body>
-    <h1>Welcome to My New Website!</h1>
+    <h1>Welcome to My New Website!001</h1>
     <p>This is a simple paragraph of text on the new page.</p>
     
     <h2>Here are some items in a bulleted list:</h2>
