--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample HTML New Page</title>
+    <title>Sample HTML New Page for Feb03</title>
 </head>
 <body>
     <h1>Welcome to My New Website!001</h1>
@@ -13,6 +13,7 @@
     <ul>
         <li>Item One</li>
         <li>Item Two</li>
+        <li>Item Three</li>
         <li>Item Three</li>
     </ul>
 
