--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sample HTML New Page for Feb03</title>
 </head>
 <body>
-    <h1>Welcome to My New Website!001</h1>
+    <h1>Welcome to My New Website!007</h1>
     <p>This is a simple paragraph of text on the new page.</p>
     
     <h2>Here are some items in a bulleted list:</h2>
@@ -14,7 +14,7 @@
         <li>Item One</li>
         <li>Item Two</li>
         <li>Item Three</li>
-        <li>Item Three</li>
+        <li>Item Four</li>
     </ul>
 
     <a href="https://www.w3schools.com" target="_blank">Visit W3Schools for more HTML tutorials</a>
