--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to My New Website! This is new</h1>
-    <p>This is a simple paragraph of text on the new page.</p>
+    <p>This is a simple paragraph of text.</p>
     
     <h2>Here are some items in a bulleted list:</h2>
     <ul>
