--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li>Item Two</li>
         <li>Item Three</li>
         <li>Item Four and five</li>
+        <li>Item Six</li>
     </ul>
 
     <a href="https://www.w3schools.com" target="_blank">Visit W3Schools for more HTML tutorials</a>
