--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li>Item Three</li>
         <li>Item Four and five</li>
         <li>Item Six</li>
+        <li>Item Seven</li>
     </ul>
 
     <a href="https://www.w3schools.com" target="_blank">Visit W3Schools for more HTML tutorials</a>
